--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,15 @@
   "icons": { "16": "calc_16.png",
     "48": "calc_48.png",
     "128": "calc_128.png" },
+
+  "permissions": [
+    "https://www.coinexchange.io/*"
+  ],
  
   "content_scripts": [{
     "css": ["content.css"],
     "js": ["jquery-3.3.1.min.js", "big.min.js", "content.js"],
-    "matches": ["https://simplepospool.com/account/report/*"],
+    "matches": ["https://simplepospool.com/*"],
     "run_at": "document_end"
   }]
  
