--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
  
   "name": "SPP Extender",
-  "version": "0.5.4",
+  "version": "0.6.0",
   "description": "Provides additional functionality for the SimplePosPool website",
 
   "icons": { "16": "calc_16.png",
@@ -16,7 +16,7 @@
  
   "content_scripts": [{
     "css": ["content.css"],
-    "js": ["jquery-3.3.1.min.js", "big.min.js", "content.js"],
+    "js": ["jquery-3.3.1.min.js", "big.min.js", "loader.js", "moment.js", "content.js"],
     "matches": ["https://simplepospool.com/*"],
     "run_at": "document_end"
   }]
